--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -809,8 +809,8 @@
     - arch: s390x
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/devel/s390x/os/
-      export_path: almalinux/9/devel/s390x/os/
+      remote_url: http://rsync.repo.almalinux.org/almalinux/9/.devel/s390x/os/
+      export_path: almalinux/9/.devel/s390x/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -819,8 +819,8 @@
     - arch: x86_64
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/devel/x86_64/os/
-      export_path: almalinux/9/devel/x86_64/os/
+      remote_url: http://rsync.repo.almalinux.org/almalinux/9/.devel/x86_64/os/
+      export_path: almalinux/9/.devel/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -829,8 +829,8 @@
     - arch: ppc64le
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/devel/ppc64le/os/
-      export_path: almalinux/9/devel/ppc64le/os/
+      remote_url: http://rsync.repo.almalinux.org/almalinux/9/.devel/ppc64le/os/
+      export_path: almalinux/9/.devel/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -839,8 +839,8 @@
     - arch: i686
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/devel/i686/os/
-      export_path: almalinux/9/devel/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/i686/os/
+      export_path: vault/9/.devel/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -849,8 +849,8 @@
     - arch: aarch64
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/devel/aarch64/os/
-      export_path: almalinux/9/devel/aarch64/os/
+      remote_url: http://rsync.repo.almalinux.org/almalinux/9/.devel/aarch64/os/
+      export_path: almalinux/9/.devel/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -859,8 +859,8 @@
     - arch: s390x
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/s390x/
-      export_path: vault/9/devel/debug/s390x/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/s390x/
+      export_path: vault/9/.devel/debug/s390x/
       production: true
       debug: true
       remote_sync_policy: immediate
@@ -869,8 +869,8 @@
     - arch: x86_64
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/x86_64/
-      export_path: vault/9/devel/debug/x86_64/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/x86_64/
+      export_path: vault/9/.devel/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: immediate
@@ -879,8 +879,8 @@
     - arch: ppc64le
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/ppc64le/
-      export_path: vault/9/devel/debug/ppc64le/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/ppc64le/
+      export_path: vault/9/.devel/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: immediate
@@ -889,8 +889,8 @@
     - arch: i686
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/i686/
-      export_path: vault/9/devel/debug/i686/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/i686/
+      export_path: vault/9/.devel/debug/i686/
       production: true
       debug: true
       remote_sync_policy: immediate
@@ -899,8 +899,8 @@
     - arch: aarch64
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/aarch64/
-      export_path: vault/9/devel/debug/aarch64/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/aarch64/
+      export_path: vault/9/.devel/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: immediate
@@ -944,8 +944,8 @@
     - arch: i686
       name: almalinux-9-appstream
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/AppStream/i686/os/
-      export_path: almalinux/9/AppStream/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/AppStream/i686/os/
+      export_path: vault/9/AppStream/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1054,8 +1054,8 @@
     - arch: i686
       name: almalinux-9-baseos
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/BaseOS/i686/os/
-      export_path: almalinux/9/BaseOS/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/BaseOS/i686/os/
+      export_path: vault/9/BaseOS/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1164,8 +1164,8 @@
     - arch: i686
       name: almalinux-9-highavailability
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/HighAvailability/i686/os/
-      export_path: almalinux/9/HighAvailability/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/HighAvailability/i686/os/
+      export_path: vault/9/HighAvailability/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1274,8 +1274,8 @@
     - arch: i686
       name: almalinux-9-resilientstorage
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/ResilientStorage/i686/os/
-      export_path: almalinux/9/ResilientStorage/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/ResilientStorage/i686/os/
+      export_path: vault/9/ResilientStorage/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1384,8 +1384,8 @@
     - arch: i686
       name: almalinux-9-extras
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/extras/i686/os/
-      export_path: almalinux/9/extras/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/extras/i686/os/
+      export_path: vault/9/extras/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1494,8 +1494,8 @@
     - arch: i686
       name: almalinux-9-crb
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/CRB/i686/os/
-      export_path: almalinux/9/CRB/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/CRB/i686/os/
+      export_path: vault/9/CRB/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1664,8 +1664,8 @@
     - arch: i686
       name: almalinux-9-sap
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/SAP/i686/os/
-      export_path: almalinux/9/SAP/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/SAP/i686/os/
+      export_path: vault/9/SAP/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -1774,8 +1774,8 @@
     - arch: i686
       name: almalinux-9-saphana
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/almalinux/9/SAPHANA/i686/os/
-      export_path: almalinux/9/SAPHANA/i686/os/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/SAPHANA/i686/os/
+      export_path: vault/9/SAPHANA/i686/os/
       production: true
       debug: false
       remote_sync_policy: immediate
