--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -810,7 +810,7 @@
       name: almalinux-9-devel
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/s390x/os/
-      export_path: vault/9/.devel/s390x/os/
+      export_path: almalinux/9/.devel/s390x/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -820,7 +820,7 @@
       name: almalinux-9-devel
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/x86_64/os/
-      export_path: vault/9/.devel/x86_64/os/
+      export_path: almalinux/9/.devel/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -830,7 +830,7 @@
       name: almalinux-9-devel
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/ppc64le/os/
-      export_path: vault/9/.devel/ppc64le/os/
+      export_path: almalinux/9/.devel/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: immediate
@@ -850,7 +850,7 @@
       name: almalinux-9-devel
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/aarch64/os/
-      export_path: vault/9/.devel/aarch64/os/
+      export_path: almalinux/9/.devel/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: immediate
