--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -743,6 +743,96 @@
       remote_sync_policy: on_demand
       repository_sync_policy: additive
       priority: 10
+    - arch: aarch64
+      name: almalinux-8-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/8/plus/aarch64/os/
+      export_path: almalinux/8/plus/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: ppc64le
+      name: almalinux-8-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/8/plus/ppc64le/os/
+      export_path: almalinux/8/plus/ppc64le/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: x86_64
+      name: almalinux-8-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/8/plus/x86_64/os/
+      export_path: almalinux/8/plus/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: i686
+      name: almalinux-8-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/i686/os/
+      export_path: vault/8/plus/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: src
+      name: almalinux-8-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/Source/
+      export_path: vault/8/plus/Source/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: aarch64
+      name: almalinux-8-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/debug/aarch64/
+      export_path: vault/8/plus/debug/aarch64/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: ppc64le
+      name: almalinux-8-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/debug/ppc64le/
+      export_path: vault/8/plus/debug/ppc64le/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: x86_64
+      name: almalinux-8-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/debug/x86_64/
+      export_path: vault/8/plus/debug/x86_64/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: i686
+      name: almalinux-8-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/plus/debug/i686/
+      export_path: vault/8/plus/debug/i686/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
 
 - name: AlmaLinux-9
   distr_type: rhel
@@ -1886,6 +1976,116 @@
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/vault/9/SAPHANA/debug/s390x/
       export_path: vault/9/SAPHANA/debug/s390x/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: aarch64
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/plus/aarch64/os/
+      export_path: almalinux/9/plus/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: ppc64le
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/plus/ppc64le/os/
+      export_path: almalinux/9/plus/ppc64le/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: x86_64
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/plus/x86_64/os/
+      export_path: almalinux/9/plus/x86_64/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: s390x
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/plus/s390x/os/
+      export_path: almalinux/9/plus/s390x/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: i686
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/i686/os/
+      export_path: vault/9/plus/i686/os/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: src
+      name: almalinux-9-plus
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/Source/
+      export_path: vault/9/plus/Source/
+      production: true
+      debug: false
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: aarch64
+      name: almalinux-9-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/debug/aarch64/
+      export_path: vault/9/plus/debug/aarch64/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: ppc64le
+      name: almalinux-9-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/debug/ppc64le/
+      export_path: vault/9/plus/debug/ppc64le/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: x86_64
+      name: almalinux-9-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/debug/x86_64/
+      export_path: vault/9/plus/debug/x86_64/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: s390x
+      name: almalinux-9-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/debug/s390x/
+      export_path: vault/9/plus/debug/s390x/
+      production: true
+      debug: true
+      remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - arch: i686
+      name: almalinux-9-plus-debuginfo
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/plus/debug/i686/
+      export_path: vault/9/plus/debug/i686/
       production: true
       debug: true
       remote_sync_policy: immediate
