--- a/Dockerfile.oval-cacher
+++ b/Dockerfile.oval-cacher
@@ -7,7 +7,8 @@ RUN mkdir -p /code && \
 RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -o wait_for_it.sh && chmod +x wait_for_it.sh
 COPY ./alws/scripts/git_cacher/requirements.txt /tmp/requirements.txt
 RUN cd /code && virtualenv -p python3.9 env && source env/bin/activate \
-    && pip3 install -r /tmp/requirements.txt --no-cache-dir
+    && pip3 install -r /tmp/requirements.txt --no-cache-dir && pip3 install lxml --no-cache-dir
 COPY ./alws /code/alws
+COPY ./almalinux /code/almalinux
 WORKDIR /code
 CMD ["/bin/bash", "-c", "source env/bin/activate && PYTHONPATH='.' python alws/scripts/oval_cacher/oval_cacher.py"]
