--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -373,6 +373,16 @@
       production: false
       debug: false
       priority: 10
+    - name: almalinux-8-raspberrypi
+      arch: aarch64
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/8/raspberrypi/aarch64/os/
+      export_path: almalinux/8/raspberrypi/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
     - name: almalinux-8-baseos
       arch: src
       type: rpm
@@ -448,6 +458,16 @@
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/extras/Source/
       export_path: vault/8/extras/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+    - name: almalinux-8-raspberrypi
+      arch: src
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/raspberrypi/Source/
+      export_path: vault/8/raspberrypi/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -831,6 +851,16 @@
       production: true
       debug: true
       remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - name: almalinux-8-raspberrypi-debuginfo
+      arch: aarch64
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/8/raspberrypi/debug/aarch64/
+      export_path: vault/8/raspberrypi/debug/aarch64/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
       repository_sync_policy: additive
       priority: 10
 
@@ -2089,5 +2119,35 @@
       production: true
       debug: true
       remote_sync_policy: immediate
+      repository_sync_policy: additive
+      priority: 10
+    - name: almalinux-9-raspberrypi
+      arch: aarch64
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/raspberrypi/aarch64/os/
+      export_path: almalinux/9/raspberrypi/aarch64/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+    - name: almalinux-9-raspberrypi
+      arch: src
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/raspberrypi/Source/
+      export_path: vault/9/raspberrypi/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+    - name: almalinux-9-raspberrypi-debuginfo
+      arch: aarch64
+      type: rpm
+      remote_url: https://rsync.repo.almalinux.org/vault/9/raspberrypi/debug/aarch64/
+      export_path: vault/9/raspberrypi/debug/aarch64/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
       repository_sync_policy: additive
       priority: 10
