--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,6 +201,10 @@ services:
     devices:
       - "/dev/fuse"
     restart: on-failure
+    #  echo "listen_addresses = '*'" >> /var/lib/pgsql/data/postgresql.conf &&
+    #  echo "host all all 0.0.0.0/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
+    #  echo "host all all ::/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
+    #  runuser postgres -c 'echo "ALTER USER postgres WITH PASSWORD '"'"'password'"'"';" | /usr/bin/psql'
 
   mosquitto:
     image: eclipse-mosquitto:2.0
