--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -933,8 +933,8 @@
     - arch: s390x
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/s390x/os/
-      export_path: almalinux/9/.devel/s390x/os/
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/devel/s390x/os/
+      export_path: almalinux/9/devel/s390x/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -943,8 +943,8 @@
     - arch: x86_64
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/x86_64/os/
-      export_path: almalinux/9/.devel/x86_64/os/
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/devel/x86_64/os/
+      export_path: almalinux/9/devel/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -953,8 +953,8 @@
     - arch: ppc64le
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/ppc64le/os/
-      export_path: almalinux/9/.devel/ppc64le/os/
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/devel/ppc64le/os/
+      export_path: almalinux/9/devel/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -963,8 +963,8 @@
     - arch: i686
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/i686/os/
-      export_path: vault/9/.devel/i686/os/
+      remote_url: https://rsync.repo.almalinux.org/vault/9/devel/i686/os/
+      export_path: vault/9/devel/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -973,8 +973,8 @@
     - arch: aarch64
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/aarch64/os/
-      export_path: almalinux/9/.devel/aarch64/os/
+      remote_url: https://rsync.repo.almalinux.org/almalinux/9/devel/aarch64/os/
+      export_path: almalinux/9/devel/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -983,8 +983,8 @@
     - arch: src
       name: almalinux-9-devel
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/Source/
-      export_path: vault/9/.devel/Source/
+      remote_url: https://rsync.repo.almalinux.org/vault/9/devel/Source/
+      export_path: vault/9/devel/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -993,8 +993,8 @@
     - arch: s390x
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/s390x/
-      export_path: vault/9/.devel/debug/s390x/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/s390x/
+      export_path: vault/9/devel/debug/s390x/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -1003,8 +1003,8 @@
     - arch: x86_64
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/x86_64/
-      export_path: vault/9/.devel/debug/x86_64/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/x86_64/
+      export_path: vault/9/devel/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -1013,8 +1013,8 @@
     - arch: ppc64le
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/ppc64le/
-      export_path: vault/9/.devel/debug/ppc64le/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/ppc64le/
+      export_path: vault/9/devel/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -1023,8 +1023,8 @@
     - arch: i686
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/i686/
-      export_path: vault/9/.devel/debug/i686/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/i686/
+      export_path: vault/9/devel/debug/i686/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -1033,8 +1033,8 @@
     - arch: aarch64
       name: almalinux-9-devel-debuginfo
       type: rpm
-      remote_url: http://rsync.repo.almalinux.org/vault/9/.devel/debug/aarch64/
-      export_path: vault/9/.devel/debug/aarch64/
+      remote_url: http://rsync.repo.almalinux.org/vault/9/devel/debug/aarch64/
+      export_path: vault/9/devel/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
