--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -871,18 +871,21 @@
       remote_url: https://repo.almalinux.org/development/almalinux/8/devel/s390x/os/
       production: false
       priority: 5
+      debug: false
     - arch: s390x
       name: almalinux-8-s390x-javapackages
       type: rpm
       remote_url: https://repo.almalinux.org/development/almalinux/8/javapackages/s390x/
       production: false
       priority: 5
+      debug: false
     - arch: s390x
       name: almalinux-8-beta-s390x
       type: rpm
       remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-s390x-bootstrap-AlmaLinux-8-s390x-dr/
       production: false
       priority: 10
+      debug: false
 
 - name: AlmaLinux-9
   distr_type: rhel
