--- a/alws/alembic.ini
+++ b/alws/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # default: use os.pathsep
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:password@db/almalinux-bs
+sqlalchemy.url = postgresql+psycopg2://postgres:password@albs-db/almalinux-bs
 
 
 [post_write_hooks]
