--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -1,13 +1,13 @@
 upstream backend {
-    server albs-web-server:8000;
+    server web_server:8000;
 }
 
 upstream frontend {
-    server albs-frontend:8080;
+    server frontend:8080;
 }
 
 upstream pulp {
-    server albs-pulp:80;
+    server pulp:80;
 }
 
 map $http_upgrade $connection_upgrade {
@@ -16,9 +16,8 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 80;
+    listen           80;
     client_max_body_size 100M;
-
     location / {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
