--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ tap.py==3.1
 aiohttp_retry==2.4.6
 jinja2==3.1.2
 pgpy==0.5.4
+git+https://git.almalinux.org/almalinux/cas_wrapper.git@0.0.2#egg=cas_wrapper
