--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -961,23 +961,23 @@
       repository_sync_policy: additive
       priority: 10
     - arch: s390x
-      name: almalinux-8-s390x-devel
-      type: rpm
-      remote_url: https://repo.almalinux.org/development/almalinux/8/devel/s390x/os/
-      production: false
-      priority: 5
-      debug: false
-    - arch: s390x
       name: almalinux-8-s390x-javapackages
       type: rpm
       remote_url: https://repo.almalinux.org/development/almalinux/8/javapackages/s390x/
       production: false
-      priority: 5
+      priority: 10
+      debug: false
+    - arch: s390x
+      name: almalinux-8-bootstrap-s390x
+      type: rpm
+      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-s390x-bootstrap-AlmaLinux-8-s390x-dr/
+      production: false
+      priority: 10
       debug: false
     - arch: s390x
       name: almalinux-8-beta-s390x
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-s390x-bootstrap-AlmaLinux-8-s390x-dr/
+      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-s390x-beta-AlmaLinux-8-s390x-dr/
       production: false
       priority: 10
       debug: false
