Fixed export paths for i686 RT and NFV repos

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -864,7 +864,7 @@
       name: almalinux-8-nfv
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/almalinux/8/NFV/i686/os/
-      export_path: almalinux/8/NFV/i686/os/
+      export_path: vault/8/NFV/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -914,7 +914,7 @@
       name: almalinux-8-rt
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/almalinux/8/RT/i686/os/
-      export_path: almalinux/8/RT/i686/os/
+      export_path: vault/8/RT/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -1855,7 +1855,7 @@
       name: almalinux-9-nfv
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/almalinux/9/NFV/i686/os/
-      export_path: almalinux/9/NFV/i686/os/
+      export_path: vault/9/NFV/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -1905,7 +1905,7 @@
       name: almalinux-9-rt
       type: rpm
       remote_url: http://rsync.repo.almalinux.org/almalinux/9/RT/i686/os/
-      export_path: almalinux/9/RT/i686/os/
+      export_path: vault/9/RT/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
