Initial COPR plugin integration

--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -33,6 +33,22 @@ server {
         proxy_pass $scheme://backend;
     }
 
+    location /api_3/ {
+        proxy_read_timeout 900s;
+        proxy_set_header Host $http_host;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_pass $scheme://backend;
+    }
+
+    location /coprs/ {
+        proxy_read_timeout 900s;
+        proxy_set_header Host $http_host;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_pass $scheme://backend;
+    }
+
     location /docs {
         proxy_pass $scheme://backend;
     }
