--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ tap.py==3.1
 aiohttp_retry==2.4.6
 jinja2==3.1.2
 pgpy==0.5.4
+markdown==3.4.1
 fastapi-users-db-sqlalchemy==4.0.3
 httpx-oauth==0.7.0
 git+https://git.almalinux.org/almalinux/cas_wrapper.git@0.0.2#egg=cas_wrapper
