--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -1,8 +1,8 @@
 - name: AlmaLinux-8-beta
   modularity:
     git_tag_prefix:
-      modified: a8-beta
-      non_modified: c8-beta
+      modified: a8
+      non_modified: c8
     versions:
       - name: '8.7'
         version_prefix: '80700'
@@ -94,8 +94,8 @@
 - name: AlmaLinux-9-beta
   modularity:
     git_tag_prefix:
-      modified: a9-beta
-      non_modified: c9-beta
+      modified: a9
+      non_modified: c9
     versions:
       - name: '9.1'
         version_prefix: '90100'
